--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,6 +19,7 @@ rules:
   object-shorthand: off
   one-var: off
   prefer-arrow-callback: off
+  prefer-destructuring: off
   prefer-template: off
   vars-on-top: off
 globals:
